overlapping height fixed

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
     top: 100vh;
     width: 100vw;
     left: 0;
-    height: 100%;
+    /* height: 100%; */
     background-color: black;
     /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); */
     background-size: cover;
